successfully transferring playback info

--- a/MYMC/MYMC.csproj
+++ b/MYMC/MYMC.csproj
@@ -30,7 +30,7 @@
     <ItemGroup>
       <None Remove="Scripts\player-state.js" />
       <Content Include="Scripts\player-state.js">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
 
