--- a/MYMC/MYMC.csproj
+++ b/MYMC/MYMC.csproj
@@ -7,6 +7,9 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
+        <Company>Mustafa Can Yucel</Company>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <FileVersion>0.0.0.4</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
