--- a/MYMC/MYMC.csproj
+++ b/MYMC/MYMC.csproj
@@ -22,12 +22,14 @@
 
     <ItemGroup>
       <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.11.71" />
       <PackageReference Include="MahApps.Metro" Version="2.4.10" />
       <PackageReference Include="MahApps.Metro.IconPacks" Version="5.1.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
       <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2903.40" />
       <PackageReference Include="Serilog" Version="4.1.0" />
       <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+      <PackageReference Include="SimMetrics.Net" Version="1.0.5" />
     </ItemGroup>
 
     <ItemGroup>
