--- a/MYMC/MYMC.csproj
+++ b/MYMC/MYMC.csproj
@@ -26,6 +26,7 @@
       <PackageReference Include="MahApps.Metro" Version="2.4.10" />
       <PackageReference Include="MahApps.Metro.IconPacks" Version="5.1.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
       <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2903.40" />
       <PackageReference Include="Serilog" Version="4.1.0" />
       <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
