--- a/MYMC/MYMC.csproj
+++ b/MYMC/MYMC.csproj
@@ -9,7 +9,7 @@
         <UseWPF>true</UseWPF>
         <Company>Mustafa Can Yucel</Company>
         <AssemblyVersion>1.0.0.0</AssemblyVersion>
-        <FileVersion>0.0.0.6</FileVersion>
+        <FileVersion>0.0.0.8</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -38,6 +38,11 @@
       <Content Include="Scripts\player-state.js">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Resources\album_art_placeholder.png" />
+      <Resource Include="Resources\album_art_placeholder.png" />
     </ItemGroup>
 
 </Project>
