--- a/MYMC/MYMC.csproj
+++ b/MYMC/MYMC.csproj
@@ -9,7 +9,8 @@
         <UseWPF>true</UseWPF>
         <Company>Mustafa Can Yucel</Company>
         <AssemblyVersion>1.0.0.0</AssemblyVersion>
-        <FileVersion>0.0.0.8</FileVersion>
+        <FileVersion>0.0.1.0</FileVersion>
+        <ApplicationIcon>Resources\app-icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
