--- a/MYMC/MYMC.csproj
+++ b/MYMC/MYMC.csproj
@@ -9,7 +9,7 @@
         <UseWPF>true</UseWPF>
         <Company>Mustafa Can Yucel</Company>
         <AssemblyVersion>1.0.0.0</AssemblyVersion>
-        <FileVersion>0.2.0.0</FileVersion>
+        <FileVersion>1.1.0.0</FileVersion>
         <ApplicationIcon>Resources\app-icon.ico</ApplicationIcon>
     </PropertyGroup>
 
@@ -44,6 +44,21 @@
     <ItemGroup>
       <None Remove="Resources\album_art_placeholder.png" />
       <Resource Include="Resources\album_art_placeholder.png" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Properties\Settings.Designer.cs">
+        <DesignTimeSharedInput>True</DesignTimeSharedInput>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Settings.settings</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Properties\Settings.settings">
+        <Generator>SettingsSingleFileGenerator</Generator>
+        <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+      </None>
     </ItemGroup>
 
 </Project>
